stateDiagram-v2
    direction LR
    [*] --> Pending
    Pending --> Running : immediate
    Running --> state=REJECTED : task throws
    state=REJECTED --> Rejected

    state Pending {
      [*] --> state=PENDING
      state=PENDING --> Timer
      Timer --> [*]
      Timer : Start Timer
    }

    state Running {
      [*] --> state=RUNNING
      state=RUNNING --> NotifyStarted
      NotifyStarted --> [*]
      NotifyStarted : Notify onStart
    }

    state Rejected {
      [*] --> NotifyRejected
      NotifyRejected --> [*]
      NotifyRejected : Notify onRejected
    }
